[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robe-nodes"
version = "0.1.0"
description = "Personal custom nodes and tools for ComfyUI."
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["dependencies"]
classifiers = ["Operating System :: OS Independent"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/RobeSantoro/ComfyUI-RobeNodes"
"Bug Tracker" = "https://github.com/RobeSantoro/ComfyUI-RobeNodes/issues"

[tool.comfy]
PublisherId = "robe"
DisplayName = "RobeNodes"
